TypeChecking/test_cases/good/inherit-no-cycle.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class X inherits Y { } ;
class Y inherits Z { } ;
class Z inherits A { } ;
class A inherits B { } ;
class B inherits C { } ;
class C inherits Object { } ;
