TypeChecking/test_cases/bad/bad-self-2.cl
class Main {
  main( ) : Object { 5 } ; 

  foo(x : Int, y : SELF_TYPE) : Int { 5 } ; 
} ;

